<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_operation_card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:animateLayoutChanges="true"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/small_margin"
        app:cardElevation="@dimen/small_margin">

        <za.co.dstv.component.GoalProgress
            android:id="@+id/pbGoalProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:multiply_progress_active_label_text="@string/savings_tracker_active_label"
            app:multiply_progress_active_text="Task"
            app:multiply_progress_inactive_text="@string/savings_tracker_inactive_label" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/medium_margin"
        android:padding="@dimen/medium_padding"
        android:text="@string/todo_list_dstv"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginLeft="@dimen/medium_margin"
            android:padding="@dimen/medium_padding"
            android:textColor="@color/colorAccent"
            android:text="@string/no_active_task"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTodoList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/large_margin"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            tools:listitem="@layout/todo_list_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/medium_margin"
            app:srcCompat="@drawable/ic_plus" />

    </FrameLayout>
</LinearLayout>
